--- a/python-lectures/09_linear_systems_direct_2.ipynb
+++ b/python-lectures/09_linear_systems_direct_2.ipynb
@@ -34,11 +34,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3*e - 1\n",
+      "8*e - 11\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "import numpy as np\n",
@@ -51,19 +60,35 @@
     "e = sym.symbols('e')\n",
     "\n",
     "a = Matrix(([e ,1, 2], [1, 3, 1],[2, 1, 3]))\n",
+    "\n",
+    "print a[0:2,0:2].det()\n",
+    "print a.det()\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  1.41421356e+00   7.07106781e-01   1.41421356e+00]\n",
+      " [  0.00000000e+00   1.58113883e+00   1.40433339e-16]\n",
+      " [  0.00000000e+00   0.00000000e+00   1.00000000e+00]]\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
-    "\n"
+    "A = np.matrix(a.subs(e,2)) # substitute\n",
+    "R = scipy.linalg.cholesky(A)\n",
+    "\n",
+    "print R\n"
    ]
   },
   {
@@ -74,7 +99,9 @@
    },
    "outputs": [],
    "source": [
-    "\n"
+    "b = np.array([1,1,1])\n",
+    "\n",
+    "y = scipy.linalg.solve(R, y)\n"
    ]
   },
   {
@@ -154,82 +181,163 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-3.0*e**2 - 2.0*e + 11.6666666666667\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "a = Matrix(([1. ,e, -1.], [e, 35./3, 1.],[-1., e, 2.]))\n",
+    "\n",
+    "print a.det()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "\n",
-    "a = Matrix(([1. ,e, -1.], [e, 35./3, 1.],[-1., e, 2.]))\n",
-    "\n",
-    "\n"
+    "L,U,P = a.LUdecomposition()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrix([[1, 0, 0], [1.0*e, 1, 0], [-1.00000000000000, 2.0*e/(-1.0*e**2 + 11.6666666666667), 1]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print L"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrix([[1.00000000000000, e, -1.00000000000000], [0, -1.0*e**2 + 11.6666666666667, 1.0*e + 1.0], [0, 0, -2.0*e*(1.0*e + 1.0)/(-1.0*e**2 + 11.6666666666667) + 1.0]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print U"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print P"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrix([[1.00000000000000, 3.41565025531987, -1.00000000000000], [0, 0, 4.41565025531987], [0, 0, zoo]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "val = np.sqrt(35/3.)\n",
+    "print U.subs(e,val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "P, L, U = scipy.linalg.lu(a.subs(e,val))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.  0.  1.]\n",
+      " [ 1.  0.  0.]\n",
+      " [ 0.  1.  0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print P"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": []
+   "source": [
+    "R = scipy.linalg.cholesky()"
+   ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python2"
   },
@@ -243,7 +351,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
